# musepack_xmms-musepack

./: COPYING  ChangeLog  INSTALL  Makefile.in  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in  equalizer.cpp  equalizer.h  libmpc.cpp  libmpc.h
